prevent line breaks in CV in safari

--- a/assets/sass/_info.scss
+++ b/assets/sass/_info.scss
@@ -76,6 +76,7 @@
     float: right;
     overflow: hidden;
     position: relative;
+    white-space: nowrap;
   }
   .dc-cv--entry > a{
     flex-grow: 2;
